# yapCAD

./: .coveragerc  .env.local  .gitignore  .readthedocs.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.rst  DSL_EDITOR_README.md  EDGE_SELECTION_DSL_BINDINGS.md  Gemini.md  LICENSE  LICENSE.txt  README.md  README.rst  drawable.py  environment-full.yml  environment.yml  example1.py  example2.py  example3.py  ezdxf_drawable.py  geom.py  geometry.py  package-lock.json  package.json  poly.py  pyglet_drawable.py  pyocc-validate.py  pyproject.toml  pytest.ini  requirements.txt  run_visual_tests.py  run_visual_tests_venv.sh  setup.cfg  setup.py  test_geom.py  vite-plugin-local-packages.ts  vite.config.ts  xform.py
.github/workflows/: python-package.yml
docs/: BREP_integration_strategy.md  Makefile  SKILL-REPO-PROTOCOL.md  YAPCAD-V2-VISION.md  assembly_system.rst  conf.py  dslNext.rst  dsl_guide.md  dsl_reference.md  dsl_spec.md  dsl_spec.rst  dsl_tutorial.md  geometry_json_schema.md  index.rst  manufacturing_postprocessing.rst  material_schema_spec.md  mesh_validation.md  metadata_namespace.md  metadata_namespace.rst  phase3_implementation_roadmap.md  requirements.txt  signing_spec.rst  solid_boolean_roadmap.md  validation_schema.rst  yapBREP.md  yapBREP.rst  yapCADfoundations.md  yapCADone.md  yapCADone.rst  ycpkg_spec.md  ycpkg_spec.rst
docs/historical/: BREP_integration_strategy.md  Gemini_analysis.md  dslNext.rst  dsl_spec.rst  phase3_implementation_roadmap.md  solid_boolean_roadmap.md
dxf/: README.md  README.rst  boxout.dxf  example1-out.dxf  example10-out.dxf  example3-out.dxf  example4-out.dxf  example5-out.dxf  example6-out.dxf  example7-out.dxf  example8-out.dxf
editors/: yapcad-dsl-mode.el
examples/: README.md  README.rst  __init__.py  analytic_surfaces_demo.py  assembly_complete_workflow.py  assembly_constraint_demo.py  bulkhead.py  bulkhead_calculix.yaml  bulkhead_sweep.py  conic_demo.py  datum_example.py  example1.py  example10.py  example11.py  example12.py  example13.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8-gl.py  example8.py  example8_package.py  example9.py  fasteners.dsl  figgear.dsl  figgear_pure.dsl  fillet_chamfer_demo.dsl  import_demo.py  import_stl_demo.dsl  mounting_plate.dsl  new_2d_features.dsl  rocket_cutaway_internal.py  rocket_demo.py  rocket_grid_demo.py  rocket_loft_demo.py  simple_assembly.py  solid_boolean_demo.py  (+5 more)
examples/boxcut/: README.md  README.rst  boxcut.py
examples/globe_stand/: globe_stand_fea.py  globe_stand_v4.dsl  globe_stand_v5.dsl  segment_globe_stand.py
examples/involute_gear_package/: README.md  __init__.py  build_gear_package.py  involute_gear.py  sample_drive.py
examples/thrust_structure/: PLAN.md  optimize.py  run_demo.sh  run_validation.py  thrust_structure.dsl  visualize.py
globestand.ycpkg/: manifest.yaml
globestand.ycpkg/geometry/: primary.json
images/: README.md  README.rst
projects/: MODULAR-ROBOT.md  YAPCAD-V2-VISION.md  hydra_build.py  hydra_robot.dsl  pipe_bending_jig_sweep.dsl  resonator_hanger.dsl
public/: sample.dsl  spline_demo.dsl
service/: README.md  __init__.py  main.py  requirements.txt
service/core/: __init__.py  ast_serialize.py  dsl_runner.py  tessellator.py
service/models/: __init__.py  schemas.py
service/routes/: dsl.py  geometry.py  profile.py  render.py  system.py  ws.py
specs/: YAPCAD-SERVER-API.md
src/: App.tsx  main.tsx  yapcad-loader.ts
src/backend/: main.py  models.py
src/components/: ChatPanel.tsx  CommandSelector.tsx  DSLEditor.tsx  FileBar.tsx  LayerPanel.tsx  LightingSelector.tsx  ParameterPanel.tsx  RenderModeSelector.tsx  SessionBar.tsx  SketchViewer.tsx  SkillEditor.tsx
src/hooks/: useChat.ts  useTabState.ts
src/utils/: packageParser.ts
src/viewer/: YapCADViewer.ts  index.ts
src/yapcad/: __init__.py  analytic_surfaces.py  brep.py  brep_edge_select.py  combine.py  drawable.py  ezdxf_drawable.py  ezdxf_exporter.py  fasteners.py  fasteners_legacy.py  geom.py  geom3d.py  geom3d_util.py  geom_util.py  geometry.py  geometry_checks.py  geometry_utils.py  mesh.py  metadata.py  native_brep.py  occ_native_convert.py  octtree.py  poly.py  pyglet_drawable.py  spline.py  text3d.py  threadgen.py  triangulator.py  xform.py
src/yapcad/dsl/: ast.py  (+12 more)
tests/: conftest.py  test_analysis_gmsh.py  test_analysis_native.py  test_analysis_plan.py  test_analytic_surfaces.py  test_assembly_constraint_validator.py  test_assembly_load_case_bolt_pattern.py  test_assembly_mechatron_export.py  test_assembly_resolver.py  test_bezier_bspline.py  test_boolean_2d.py  test_boolean_regression.py  test_brep.py  test_brep_edge_select.py  test_coincident_constraint.py  test_conic.py  test_contrib_figgear.py  test_dsl_assembly_builtins.py  test_dsl_checker.py  test_dsl_lexer.py  test_dsl_meta_apply.py  test_dsl_packaging.py  test_dsl_parser.py  test_dsl_runtime.py  test_ellipse.py  test_extrusion.py  test_fasteners.py  test_fillet_chamfer.py  test_geom.py  test_geom3d.py  test_geom3d_primitives.py  test_geom_util.py  test_geometry.py  test_geometry_checks.py  test_geometry_json.py  test_geometry_utils.py  test_geomlist_snap.py  test_involute_gear.py  test_io_step.py  test_io_stl.py  (+25 more)
tests/fixtures/: enclosure_shell_cutouts_v1.dsl  sample_assembly_graph.json
tools/: analyze_vertices.py  diagnose_boolean.py  diagnose_primitive.py  find_func.py  mesh_diagnostics.py  render_assembly.py  validate_mesh.py  ycpkg_analyze.py  ycpkg_export.py  ycpkg_validate.py  ycpkg_viewer.py
tools/reference/: assembly_matplotlib_multiview.py  assembly_matplotlib_multiview_fast.py  assembly_xray_4view.py  assembly_xray_6view.py
web-viewer/: package.json  requirements.txt  run-backend.sh
web-viewer/specs/: task-2a-pydantic-models.md
web-viewer/src/: yapcad-loader.ts
web-viewer/test-data/: cube-sphere.json
workbench/: Caddyfile  index.html  run-backend.sh  tsconfig.json  vite.config.ts
workbench/public/: index.html  mounting_plate_2d.dsl
yapcad/: combine.py  drawable.py  ezdxf_drawable.py  geom.py  geom3d.py  geometry.py  poly.py  pyglet_drawable.py  xform.py
(+111 files in other folders)
