[build-system]
# Explicit PEP 517 build backend. Without this, pip falls back to legacy
# behavior and executes setup.py, whose `from pkg_resources import ...`
# fails in modern build-isolation environments (setuptools no longer
# exposes pkg_resources there) — which broke the Read the Docs build.
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yapCAD"
version = "1.0.0rc1"
authors = [
  { name="Richard DeVaul", email="richard.devaul@gmail.com" },
]
description = "yet another procedural CAD and computational geometry system"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
      "ezdxf>=1.1",
      "pyglet>=1.5,<2",
      "mpmath>=1.2",
      "numpy>=1.22",
      "mapbox-earcut>=1.0.3",
      "PyYAML>=6.0",
      "pyobjc-core; platform_system == 'Darwin'",
      "pyobjc-framework-Cocoa; platform_system == 'Darwin'",
      "pyobjc-framework-Quartz; platform_system == 'Darwin'"
      ]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
meshcheck = [
  "trimesh>=4.0",
  "pymeshfix>=0.16",
]
[project.urls]
"Homepage" = "https://github.com/rdevaul/yapCAD/"
"Documentation" = "https://yapcad.readthedocs.io/en/latest/"


[build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.setuptools]
# src/ layout package discovery (previously declared in setup.cfg, which is
# being retired in favor of pyproject as the single source of truth).
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
