[build-system]
# Explicit PEP 517 build backend. Without this, pip falls back to legacy
# behavior and executes setup.py, whose `from pkg_resources import ...`
# fails in modern build-isolation environments (setuptools no longer
# exposes pkg_resources there) — which broke the Read the Docs build.
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yapCAD"
version = "1.1.0"
authors = [
  { name="Richard DeVaul", email="richard.devaul@gmail.com" },
]
description = "yet another procedural CAD and computational geometry system"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
      "ezdxf>=1.1",
      "pyglet>=1.5,<2",
      "mpmath>=1.2",
      "numpy>=1.22",
      "mapbox-earcut>=1.0.3",
      "PyYAML>=6.0",
      "pyobjc-core; platform_system == 'Darwin'",
      "pyobjc-framework-Cocoa; platform_system == 'Darwin'",
      "pyobjc-framework-Quartz; platform_system == 'Darwin'"
      ]

# NOTE ON OCC / BREP:
#   yapCAD's core is pure Python and installs from PyPI with no compiled
#   dependencies. The solid-modeling (BREP) features are optional and layer
#   on top of OpenCASCADE via ``pythonocc-core``. That package is NOT reliably
#   pip-installable across platforms; the supported distribution channel is
#   conda-forge (``conda install -c conda-forge pythonocc-core>=7.7``). We
#   therefore declare it as an optional extra for documentation/metadata
#   purposes, but users are expected to obtain OCC from conda. yapcad.brep
#   guards every OCC import and degrades gracefully when it is absent
#   (see ``yapcad.has_brep()``).
[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
meshcheck = [
  "trimesh>=4.0",
  "pymeshfix>=0.16",
]
# Solid-modeling (BREP) support. pythonocc-core is normally installed from
# conda-forge, not pip; this extra documents the requirement and version floor.
brep = [
  "pythonocc-core>=7.7",
]
# Everything: BREP + mesh repair. (Still expects OCC from conda in practice.)
full = [
  "pythonocc-core>=7.7",
  "trimesh>=4.0",
  "pymeshfix>=0.16",
]
[project.urls]
"Homepage" = "https://github.com/rdevaul/yapCAD/"
"Documentation" = "https://yapcad.readthedocs.io/en/latest/"


[build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

# NOTE: pytest configuration (including the ``requires_occ`` marker) lives in
# pytest.ini, which takes precedence over any [tool.pytest.ini_options] here.
# Keep marker definitions there.

[tool.setuptools]
# src/ layout package discovery (previously declared in setup.cfg, which is
# being retired in favor of pyproject as the single source of truth).
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
