# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
# see pyproject.toml
[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# (Build config now lives in pyproject.toml: [build-system] + [tool.setuptools].
#  The former `setup_requires = pyscaffold` line was removed because it pulled
#  pyscaffold into the build, whose setup.py imported pkg_resources and broke
#  the Read the Docs build under modern setuptools. pyproject is authoritative.)
[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = yapcad.module:function
# For example:
# console_scripts =
#     fibonacci = yapcad.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov yapcad --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Build platform-specific wheels; pure-python installs remain supported.
universal = 0

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = yapcad
extensions =
    no_skeleton
